@@ -1,3 +1,8 @@
+2015-10-19  Natalia Portillo  <claunia@claunia.com>
+
+	* DicConsole.cs:
+	  Added methods without formatting.
+
 2015-10-18  Natalia Portillo  <claunia@claunia.com>
 
 	* DicConsole.cs:
